apps/diary-app/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diary-app
  namespace: diary-app-dev
spec:
  replicas: 1 # dev는 1개로 절약
  template:
    spec:
      containers:
        - name: diary-app
          image: 194722398200.dkr.ecr.ap-northeast-2.amazonaws.com/team4-backend-api:2c7865436ed3f443939dc8f85e880df5cefedb64
          resources:
            requests:
              cpu: "250m" # dev는 낮은 사양
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
